<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">droid-alerter</string>
    <string name="create_false_email">Send false mail</string>
    <string name="from">From</string>
    <string name="subject">Subject</string>
    <string name="content">Content</string>
    <string name="send">Send</string>
    <string name="prefs_red_title">Red alerts</string>
    <string name="speak">Speak</string>
    <string name="configure">Configure</string>
    <string name="vibrate">Vibrate</string>
    <string name="configure_filter">Configure filter...</string>
    <string name="sound">Sound</string>
    <string name="no_sound">No sound</string>
    <string name="ringtone">Ringtone</string>
    <string name="default_sound_value_red">1</string>
    <string name="vibration_duration">Vibration duration</string>
    <string name="vibrate_long_long">Long - long</string>
    <string name="vibrate_short_short">Short - short</string>
    <string name="vibrate_long">Long</string>
    <string name="vibrate_short">Short</string>
    <string name="vibration_pattern">Vibration pattern</string>
    <string name="settings">Settings</string>
    <string name="prefs_yellow_title">Yellow alerts</string>
    <string name="default_sound_value_yellow">1</string>
    <string name="default_sound_value_blue">0</string>
    <string name="prefs_blue_title">Blue alerts</string>
    <string name="vibration_red_default">3</string>
    <string name="vibration_yellow_default">3</string>
    <string name="vibration_blue_default">3</string>
</resources>